--- a/SEM2/contact.html
+++ b/SEM2/contact.html
@@ -3,6 +3,18 @@
 <head>
 <script>
 
+
+
+/*function validateForm()
+{
+		var x=document.forms["login"]["username"].value;
+		if (x==null || x=="")
+  {
+  			alert("Please fill out the username");
+  			return false;
+  }*/
+
+
 function popup()
 	{
 	    var veri;
@@ -14,6 +26,7 @@ function popup()
 		   alert("Your verification code is incorrect please try again!");
 	}
 </script>
+
 </head>
 
 <SCRIPT TYPE="text/javascript">
@@ -53,17 +66,19 @@ else
 </SCRIPT>
 </head>
 
+
 <style type="text/css"><!--
 a:link {COLOR:blue; TEXT-DECORATION:none}
 a:active {COLOR:red; TEXT-DECORATION:none}
 a:visited {COLOR:brown; TEXT-DECORATION:underline}
 a:hover {COLOR:red; TEXT-DECORATION:underline overline}
+
 --></style>
 <p align = "middle">
 <table>
 <tr><td>
 <a href="main.html">
-<img src="SampleLogo.jpg" width="1000" height="150" alt="" /></a> 
+<img src="logo.jpg" width="1000" height="150" alt="" /></a> 
 
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
@@ -104,7 +119,7 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenu
 <table border="3">	
 	<tr>
 		<td><center><img src="map.gif"></center><br>
-			<p><center><font face="century gothic" color="white">JAM.K RESTAURANT<br>
+			<p><center><font face="century gothic" color="white">FEAST HOUSTON: A EUROPEAN RESTAURANT<br>
 			219 Westheimer Road, Houston, TX 77006<br>
 			Phone: 713-529-7788<br>
 			OPENING HOURS:<br>
@@ -114,7 +129,7 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenu
 		</td>
 		<td>
 			<p>
-				<font face="century gothic" color="white">Thank You for visiting Jam.K's website!<br><br>
+				<font face="century gothic" color="white">Thank You for visiting FEAST HOUSTON's website!<br><br>
 				If you have any questions or comments, we'd like to hear from you.<br>
 				Your comments, questions, and suggestions will help us serve you better.</font>
 			</p>
@@ -134,7 +149,7 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenu
 				</tr>
 				<tr>
 				<td><font color="white">Name: </font></td>
-				<td><input type="text" name="name"></td>
+				<td><input type="text" name="name" placeholder="name" required></td>
 				</tr>
 				<tr>
 				<td><font color="white">Address:</td>
@@ -142,7 +157,7 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenu
 				</tr>
 				<tr>
 				<td><font color="white">E-mail:</td>
-				<td><input type="text" name="email"></td>
+				<td><input type="email" name="usermail" placeholder="yourname@email.com" required></td>
 				</tr>
 				<tr>
 				<td><font color="white">Contact Number:</td>
@@ -159,8 +174,9 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenu
 			</table>
 				<font color="white">Message Box: <textarea cols="40" rows="5" name="myname">
 				</textarea>
-				<p align="right"><input type="button" name="submitButton" onclick="popup()" align ="right" value="Send">
-				<input type="reset" value="Clear">
+				<p align="right">
+					<input type="submit" name="submitButton" onClick="popup()" align ="right" value="Submit">
+					<input type="reset" value="Clear">
 			</form>
 		</td>
 	</tr>
@@ -213,6 +229,8 @@ var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenu
    <a href = "news.html" style ="TEXT-DECORATION: NONE;font-family:calibri"><center>News and Updates|</center></a>
    </h5>
    </td>
+
+  <td><h5>&nbsp;&nbsp;&nbsp;© 2013 Feast Houston Restaurant™. All Rights Reserved.</h5></td>
 
 </table>
 </p>
